# PlannerTUI

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: Requirement.md  sync-skill.md
src/: app.rs  main.rs
src/config/: defaults.rs  mod.rs
src/event/: keyboard.rs  mod.rs  mouse.rs
src/model/: github.rs  jira.rs  mod.rs  task.rs
src/setup/: config_gen.rs  mod.rs  render.rs  state.rs
src/storage/: json.rs  mod.rs
src/ui/: detail.rs  dialog.rs  grid.rs  mod.rs  status_bar.rs
src/ui/panel/: github_issue.rs  github_pr.rs  jira.rs  mod.rs  task.rs  timer.rs
src/widget/: timer.rs
